2009-12-11 John Wu <John.Wu at ACM.org>
	* src/query.cpp: make sure ierr is set for LOGICAL_NOT operator
	(address a problem reported by Alexandre Mauel)
	* src/array_t.cpp: change nosharing to make a copy when m_begin !=
	actual->begin()
	* src/fileManager.cpp: constructor of fileManager::rofSegment
	neglected to record the memory it allocated (address a problem
	reported by Jan Hapke)

2009-12-10 John Wu <John.Wu at ACM.org>
	* src/bundle.cpp: add code to temporarily move the aggregation
	functions to the end of the list of columns for easier sorting (to
	address the problem with aggregations appears before the group-by
	keys in the selected clause observed by Jan Hapke)
	* src/util.h: consolidate the checking of atomic operations on
	windows platforms
	* src/selectClause.h: rename innerName to argName and outerName to
	termName
	* win/trydll.cpp: replace ibis::selected with ibis::selectClause

2009-12-08 John Wu <John.Wu at ACM.org>
	* src/fileManager.cpp: move the mutex lock outside to the caller
	because most of the callers have already a mutex lock, which
	causes dead lock
	* src/whereParser.yy: introduce special cases of operator IN
	involving string literals (to address a problem reported by
	Alexandre Maurel)
	* src/qExpr.h: add qLike to represent the operator Like
	* src/whereLexer.ll, src/whereParser.yy: add LIKEOP and defintion
	of operator LIKE
	* src/category.h, src/category.cpp, src/query.cpp,
	src/countQuery.cpp, src/whereClause.cpp: update to work with
	ibis::qLike through ibis::util::strMatch

2009-12-07 John Wu <John.Wu at ACM.org>
	* win/win.Mak: remove '-o' from commands that build object files,
	visual studio has deprecated -o
	* src/array_t.cpp:301 check for nil m_begin or m_end
	* src/bitvector.cpp: 454 check for nil m_vec.begin() or
	m_vec.end()
	* src/*.cpp: address issues raised by g++ -Wall, only warnings
	left should be unused variables starting with g, which are
	ibis::util::guard objects meant to be automatically cleaned by the